--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -34,6 +34,8 @@
         app:labelVisibilityMode="labeled"
         app:layout_anchor="@+id/include"
         app:layout_anchorGravity="bottom"
-        app:menu="@menu/bottom_nav_menu" />
+        app:menu="@menu/bottom_nav_menu"/>
+<!--        android:background="@color/bottom_navigation_background_color"-->
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
