--- a/app/src/main/res/layout/chat_individual.xml
+++ b/app/src/main/res/layout/chat_individual.xml
@@ -8,24 +8,31 @@
 
     <TextView
         android:id="@+id/chat_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:maxWidth="250dp"
-        android:paddingTop="10dp"
         android:paddingStart="10dp"
-        android:textColor="@color/text_on_background"
+        android:paddingEnd="10dp"
+        android:paddingTop="10dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/text_on_background"
+        app:layout_constraintEnd_toStartOf="@+id/last_msg_timestamp"
         app:layout_constraintStart_toEndOf="@id/messengerImageView"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Person 1" />
 
     <TextView
         android:id="@+id/last_msg_content"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:paddingHorizontal="10dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:textAppearance="?android:attr/textAppearanceSmall"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/chat_name"
         app:layout_constraintTop_toBottomOf="@id/chat_name"
         tools:text="Lest do something tom" />
