--- a/app/src/main/res/layout/fragment_chats.xml
+++ b/app/src/main/res/layout/fragment_chats.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/chatsFragmentContainer"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/chatsFragmentContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="?android:attr/actionBarSize"
     tools:context=".ui.chats.ChatsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
