--- a/app/src/main/res/layout/fragment_to_do.xml
+++ b/app/src/main/res/layout/fragment_to_do.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="?android:attr/actionBarSize"
     tools:context=".ui.toDo.ToDoFragment">
 
     <androidx.recyclerview.widget.RecyclerView
