--- a/app/src/main/res/layout/chat_group.xml
+++ b/app/src/main/res/layout/chat_group.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="10dp"
         android:maxWidth="250dp"
         android:paddingTop="10dp"
+        android:paddingStart="10dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -63,8 +64,8 @@
 
     <ImageView
         android:id="@+id/messengerImageView"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:src="@drawable/group_circle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/chat_name"
