--- a/app/src/main/res/layout/custom_new_group_members_layout.xml
+++ b/app/src/main/res/layout/custom_new_group_members_layout.xml
@@ -9,9 +9,8 @@
 
     <ImageView
         android:id="@+id/iconImageView"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:src="@drawable/baseline_account_circle_24"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
         tools:ignore="ContentDescription" />
@@ -20,6 +19,9 @@
         android:id="@+id/groupMemberUsernameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxWidth="75dp"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:textSize="16sp"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
