--- a/app/src/main/res/layout/custom_search_users_layout.xml
+++ b/app/src/main/res/layout/custom_search_users_layout.xml
@@ -6,10 +6,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/searchContainer">
 
+    <ImageView
+        android:id="@+id/profileIconImageView"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="16dp"
+        tools:src="@drawable/ic_launcher_foreground" />
+
     <TextView
         android:id="@+id/searchNameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/profileIconImageView"
         android:textSize="20sp"
         android:paddingTop="16dp"
         android:paddingBottom="8dp"
@@ -22,13 +32,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/searchNameTextView"
+        android:layout_toEndOf="@id/profileIconImageView"
         android:textSize="16sp"
         android:paddingTop="4dp"
         android:paddingBottom="10dp"
         android:paddingStart="16dp"
         tools:text="Username" />
 
-    <!-- ImageView for existing Friend -->
     <ImageView
         android:id="@+id/iconImageViewFriend"
         android:layout_width="40dp"
@@ -40,7 +50,6 @@
         tools:src="@drawable/ic_launcher_foreground"
         android:visibility="gone" />
 
-    <!-- ImageView for any User -->
     <ImageView
         android:id="@+id/iconImageViewUser"
         android:layout_width="40dp"
