--- a/app/src/main/res/layout/fragment_new_group.xml
+++ b/app/src/main/res/layout/fragment_new_group.xml
@@ -45,9 +45,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/addNewGroupHorizontalRecyclerView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
