--- a/app/src/main/res/layout/custom_balances_layout.xml
+++ b/app/src/main/res/layout/custom_balances_layout.xml
@@ -3,30 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingBottom="3dp">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/todo_list_item_color_1"
         android:layout_marginHorizontal="15dp"
-        android:layout_marginVertical="5dp"
+        app:cardBackgroundColor="@color/todo_list_item_color_1"
         app:cardCornerRadius="8dp"
         app:cardElevation="2dp"
+        app:cardUseCompatPadding="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="5dp">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/balancesImageView"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:layout_marginStart="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -41,7 +40,7 @@
                 android:layout_marginEnd="8dp"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:textColor="@color/text_on_background"
+                android:textColor="@color/card_title_color"
                 android:textSize="23sp"
                 app:layout_constraintBottom_toTopOf="@+id/balanacesOwedByYou"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -54,7 +53,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="35dp"
-                android:layout_marginBottom="3dp"
+                android:layout_marginBottom="10dp"
                 android:text="@string/you_are_owed"
                 android:textColor="@color/text_on_background"
                 android:textSize="18sp"
@@ -91,8 +90,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/balancesImageView"
-                app:layout_constraintTop_toBottomOf="@+id/balancesGroupName"
-                 />
+                app:layout_constraintTop_toBottomOf="@+id/balancesGroupName" />
 
             <TextView
                 android:id="@+id/balancesAmountOwedByYou"
