--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -25,4 +25,6 @@
 
     <!--  Colors for new chat fragment  -->
     <color name="tab_layout_background">#2B2B2B</color>
+
+    <color name="default_text_color">#b8b8b8</color>
 </resources>
