--- a/app/src/main/res/layout/dialog_add_new_event.xml
+++ b/app/src/main/res/layout/dialog_add_new_event.xml
@@ -70,6 +70,7 @@
                 android:id="@+id/eventSpinnerGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:minHeight="48dp"
                 android:popupBackground="@color/card_background" />
         </LinearLayout>
 
