--- a/app/src/main/res/layout/dialog_add_new_todo_item.xml
+++ b/app/src/main/res/layout/dialog_add_new_todo_item.xml
@@ -57,6 +57,7 @@
                 android:id="@+id/spinnerGroupTodo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:minHeight="48dp"
                 android:popupBackground="@color/card_background" />
         </LinearLayout>
 
@@ -76,6 +77,7 @@
                 android:id="@+id/spinnerAssignToTodo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:minHeight="48dp"
                 android:popupBackground="@color/card_background" />
         </LinearLayout>
     </LinearLayout>
@@ -89,16 +91,16 @@
             android:id="@+id/btnDueDateTodo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/due_date"
             android:layout_marginEnd="10dp"
-            android:backgroundTint="@color/yellow"/>
+            android:backgroundTint="@color/yellow"
+            android:text="@string/due_date" />
 
         <TextView
             android:id="@+id/textViewDueDateTodo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="2023-12-30"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            tools:text="2023-12-30" />
 
     </LinearLayout>
 
