--- a/app/src/main/res/layout/dialog_chat_add_new.xml
+++ b/app/src/main/res/layout/dialog_chat_add_new.xml
@@ -20,7 +20,7 @@
             android:layout_weight="1" />
 
         <ImageButton
-            android:id="@+id/addEvent"
+            android:id="@+id/addEventAddDialog"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/baseline_deck_24"
@@ -33,7 +33,7 @@
             android:layout_weight="1" />
 
         <ImageButton
-            android:id="@+id/addTodo"
+            android:id="@+id/addTodoAddDialog"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/baseline_list_alt_24"
@@ -46,12 +46,25 @@
             android:layout_weight="1" />
 
         <ImageButton
-            android:id="@+id/addExpense"
+            android:id="@+id/addExpenseAddDialog"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/baseline_account_balance_wallet_24"
             android:background="@drawable/rounded_borders_50dp"
             android:backgroundTint="@color/pastel_green_dark"/>
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <ImageButton
+            android:id="@+id/settleBalanceAddDialog"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/scale_balance"
+            android:background="@drawable/rounded_borders_50dp"
+            android:backgroundTint="@color/pastel_sky_blue_dark"/>
 
         <Space
             android:layout_width="wrap_content"
