--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,9 +31,9 @@
     <color name="pastel_orange">#F9E2C4</color>
     <color name="pastel_lime_green">#CCE29C</color>
     <color name="pastel_blue">#D2E5F6</color>
-    <color name="pastel_indigo">#D5DEFD</color>
+    <color name="pastel_indigo">#9AB1FF</color>
     <color name="pastel_purple">#E6D9F0</color>
-    <color name="pastel_lilac">#E7CCF1</color>
+    <color name="pastel_lilac">#DD9DF4</color>
     <color name="pastel_salmon">#FBB4A7</color>
     <color name="pastel_mint">#B6DFBF</color>
     <color name="pastel_coral">#F9B7B2</color>
