--- a/app/src/main/res/layout/custom_calendar_layout.xml
+++ b/app/src/main/res/layout/custom_calendar_layout.xml
@@ -37,6 +37,7 @@
                     android:layout_marginStart="8dp"
                     android:gravity="center_vertical"
                     android:textSize="18sp"
+                    android:textStyle="bold"
                     tools:text="Group Name" />
 
                 <Space
