--- a/app/src/main/res/layout/dialog_settle_balance.xml
+++ b/app/src/main/res/layout/dialog_settle_balance.xml
@@ -38,8 +38,7 @@
     <TextView
         android:id="@+id/balanceTextView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
         android:layout_width="match_parent"
