--- a/app/src/main/res/layout/dialog_new_expense.xml
+++ b/app/src/main/res/layout/dialog_new_expense.xml
@@ -28,8 +28,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/card_background"
-            android:hint="Amount"
-            android:inputType="numberDecimal" />
+            android:hint="@string/amount"
+            android:inputType="numberDecimal"
+            android:digits="0123456789."/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
