--- a/app/src/main/res/layout/dialog_settle_balance.xml
+++ b/app/src/main/res/layout/dialog_settle_balance.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:baselineAligned="false">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -24,13 +25,14 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Settle with:"
+                android:text="@string/settle_with"
                 android:textSize="16sp" />
 
             <Spinner
                 android:id="@+id/spinnerAssignToTransaction"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:minHeight="48dp"
                 android:popupBackground="@color/card_background" />
         </LinearLayout>
     </LinearLayout>
@@ -38,7 +40,7 @@
     <TextView
         android:id="@+id/balanceTextView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
     <LinearLayout
         android:layout_width="match_parent"
